# chispa

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
chispa/: __init__.py  __main__.py  anki_client.py  audio_gen.py  cli.py  config.py  dictionary.py  image_gen.py  spinner.py
